1.8 2007-mm-dd
  - Preserve order of attribute values.
  - new command line argument -y (thanks to David Bartley)
  - new configuration option `unpaged-help'

1.7 2007-05-05
  - Fixed buffer overrun in home_filename(), thanks to Thomas Friebel.

1.6 2006-11-04
New features:
  - SASL support (thanks to Perry Nguyen)
    * new command line arguments -I, -Q, -O, -R, -Y, -X, -U, as well as
      --bind and --bind-dialog
    * new keys 'B' and '*'
    * incompatible change:
      renamed --root to --read and dropped its short name -R
  - new value encodings md5, smd5, sha1, ssha1 (thanks to Michael Hanselmann)
    * incompatible change: value encoding md5 renamed to cryptmd5
    * new configure option --with-libcrypto
  - extended ldapvi syntax with change records
    * new key 'V'
  - new command line arguments --in, --out, --delete, --rename
  - LDIF support in the editor
    * new command line arguments --ldif, --ldapvi, --ldapsearch, --ldapmodify,
      --ldapdelete, --ldapmoddn, --add
    * incompatible change: old command line argument --add renamed to --empty
  - UTF-8 support; new command line option --encoding
  - use libreadline to read the user name
  - support for configuration files ~/.ldapvirc or /etc/ldapvi.conf in
    ldapvi syntax, taking precedence over .ldaprc and /etc/ldap.conf if
    present
    * new command line argument --profile
    * new command line argument --ldap-conf
  - show optional attributes as comments
    * new command line argument -m (--may)
    * new key '+'
  - new key 'f': forget deletions
  - continuous mode, similar to ldapmodify -c
    * new key 'Y'
    * new command line argument -c (--continue)
    * incompatible change: -c does not mean --config anymore
  - incompatible change: new command line option --noninteractive
    * -! means --noninteractive now, not --noquestions
  - C-l clears the screen 
  - pipe --help to a pager if used on a terminal
Bugfixes: